# linsolve

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: labeler.yml  publish.yaml  release-draft.yml  run_tests.yaml  warnings_tests.yaml
linsolve/: __init__.py  linsolve.py  version.py
linsolve/tests/: benchmark_A_large_shared.py  benchmark_A_large_shared_sparse.py  benchmark_A_small_shared.py  benchmark_A_small_shared_sparse.py  benchmark_A_small_unique.py  benchmark_A_small_unique_sparse.py  test_linsolve.py
src/linsolve/: linsolve.py
tests/: test_linsolve.py
