[metadata]
name = linsolve
description = high-level tools for linearizing and solving systems of equations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HERA-Team/linsolve
author = HERA Team
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Mathematics
keywords =
    linear equations
    optimal estimation

[options]
packages = find:
install_requires =
    numpy>=1.23
    scipy
python_requires = >=3.8
include_package_data = True

[options.extras_require]
dev =
    coverage>=4.5.1
    pre-commit
    pytest>=3.5.1
    pytest-cov>=2.5.1
